Update About section

--- a/public/index.html
+++ b/public/index.html
@@ -61,11 +61,14 @@
   <div class="curtain-overlay absolute inset-0"></div>
   <div class="container mx-auto px-4 py-16 flex flex-col md:flex-row items-center relative z-10">
     <div class="md:w-1/2 mb-10">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Hello, I'm <span class="text-theatreGold">Fiona Nkatha Kimathi</span></h1>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4">
+        Hello, I'm <span class="text-theatreGold">Fiona Nkatha Kimathi</span>
+      </h1>
       <h2 class="text-2xl md:text-3xl font-semibold mb-6">Theatre & Film Productions</h2>
       <p class="text-lg mb-6 text-gray-200 max-w-lg">
         Bringing stories to life on stage and screen.  
-        Experienced as a <b>Costume Manager</b>, <b>Assistant Stage Manager</b>, and <b>Stage Manager</b>,  
+        Experienced as a <b>Costume Manager</b>, <b>Props Manager</b>, <b>Production Manager</b>,  
+        <b>Assistant Stage Manager</b>, and <b>Stage Manager</b>,  
         blending creativity with organization to deliver unforgettable productions.
       </p>
       <p class="text-lg mb-8 text-gray-200 max-w-lg">
@@ -85,27 +88,38 @@
 </section>
 
 
+
   <!-- About Section -->
-  <section id="about" class="py-20 bg-white dark:bg-gray-900">
-    <div class="container mx-auto px-4">
-      <h2 class="text-3xl font-bold text-center mb-16 text-theatreRed"><span class="border-b-4 border-theatreGold pb-2">About Me</span></h2>
-      <div class="flex flex-col md:flex-row items-center">
-        <div class="md:w-1/3 mb-10 flex justify-center">
-          <img src="Images/theatre.jpg" alt="Stage work" class="rounded-lg shadow-lg w-full max-w-md border-4 border-theatreGold">
-        </div>
-        <div class="md:w-2/3 md:pl-12">
-          <p class="text-gray-700 mb-6">
-            I am a passionate theatre and film professional with a focus on costume design, stage coordination, and production management.  
-            My mission is to ensure every performance flows seamlessly, from the backstage hustle to the spotlight moments.
-          </p>
-          <p class="text-gray-700">
-            With experience in both theatre and film, I thrive in fast-paced creative environments that demand organization, artistry, and collaboration.  
-            Each production I work on is more than a show — it’s a story brought to life.
-          </p>
-        </div>
+<section id="about" class="py-20 bg-white dark:bg-gray-900">
+  <div class="container mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center mb-16 text-theatreRed">
+      <span class="border-b-4 border-theatreGold pb-2">About Me</span>
+    </h2>
+    <div class="flex flex-col md:flex-row items-center">
+      <div class="md:w-1/3 mb-10 flex justify-center">
+        <img src="Images/theatre.jpg" alt="Stage work" class="rounded-lg shadow-lg w-full max-w-md border-4 border-theatreGold">
+      </div>
+      <div class="md:w-2/3 md:pl-12">
+        <p class="text-gray-700 mb-6">
+          I am a passionate <b>theatre and film professional</b> dedicated to bringing stories to life through creativity, teamwork, and precision.  
+          My experience spans across multiple roles including <b>Costume Manager</b>, <b>Props Manager</b>, <b>Production Manager</b>,  
+          <b>Assistant Stage Manager</b>, and <b>Stage Manager</b>. Each of these roles has strengthened my ability to balance artistry with organization.
+        </p>
+        <p class="text-gray-700 mb-6">
+          As a <b>Costume Manager</b>, I curate designs that reflect characters’ identities.  
+          As a <b>Props and Production Manager</b>, I ensure every detail on stage or on screen supports the story.  
+          And as a <b>Stage Manager</b>, I coordinate cast and crew to keep performances seamless and professional.
+        </p>
+        <p class="text-gray-700">
+          🎓 Beyond my theatre and film journey, I am currently pursuing a  
+          <b>Bachelor of Education in Special Needs Education (BED SNE)</b> at <b>Kenyatta University</b>, now in my <b>2nd year</b>.  
+          This academic path reflects my passion for creating inclusive environments that empower learners of all abilities — a value that also influences my approach in the creative arts.
+        </p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Productions Section -->
   <section id="projects" class="py-20 relative curtain-bg text-white">
@@ -126,9 +140,9 @@
 
         <!-- Production 2 -->
         <div class="bg-white text-gray-900 rounded-lg overflow-hidden shadow-md border-2 border-theatreGold">
-          <img src="Images/play2.jpg" alt="Production 2" class="w-full h-48 object-cover">
+          <img src="Images/theatre.jpg" alt="Production 2" class="w-full h-48 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-bold text-theatreRed mb-2">Betrayal in the City</h3>
+            <h3 class="text-xl font-bold text-theatreRed mb-2">Chains Of the Past</h3>
             <p>Costume Manager — Designed and curated costumes to reflect the socio-political themes of the play.</p>
           </div>
         </div>
@@ -137,7 +151,7 @@
         <div class="bg-white text-gray-900 rounded-lg overflow-hidden shadow-md border-2 border-theatreGold">
           <img src="Images/film1.jpg" alt="Production 3" class="w-full h-48 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-bold text-theatreRed mb-2">The Silent Echo (Short Film)</h3>
+            <h3 class="text-xl font-bold text-theatreRed mb-2">DaiVerse</h3>
             <p>Stage Manager — Coordinated cast and crew for a flawless indie film shoot.</p>
           </div>
         </div>
