Add favicon link

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
 </head>
 <body class="bg-gray-50 text-gray-800 dark:bg-gray-900 dark:text-gray-200 font-sans">
 
