--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       <a href="#home" class="text-2xl font-bold text-theatreGold">Fiona Nkatha Kimathi</a>
       <nav class="hidden md:block">
         <ul class="flex space-x-8">
-          <li><a href="#home" class="hover:text-theatreGold transition">Home</a></li>
-          <li><a href="#about" class="hover:text-theatreGold transition">About</a></li>
-          <li><a href="#projects" class="hover:text-theatreGold transition">Productions</a></li>
-          <li><a href="#skills" class="hover:text-theatreGold transition">Skills</a></li>
-          <li><a href="#education" class="hover:text-theatreGold transition">Education</a></li>
-          <li><a href="#contact" class="hover:text-theatreGold transition">Contact</a></li>
+          <li><a href="#home" class="nav-link hover:text-theatreGold transition">Home</a></li>
+          <li><a href="#about" class="nav-link hover:text-theatreGold transition">About</a></li>
+          <li><a href="#projects" class="nav-link hover:text-theatreGold transition">Productions</a></li>
+          <li><a href="#skills" class="nav-link hover:text-theatreGold transition">Skills</a></li>
+          <li><a href="#education" class="nav-link hover:text-theatreGold transition">Education</a></li>
+          <li><a href="#contact" class="nav-link hover:text-theatreGold transition">Contact</a></li>
         </ul>
       </nav>
     </div>
