Add social media platforms

--- a/index.html
+++ b/index.html
@@ -116,6 +116,24 @@
           <b>Bachelor of Education in Special Needs Education (BED SNE)</b> at <b>Kenyatta University</b>, now in my <b>2nd year</b>.  
           This academic path reflects my passion for creating inclusive environments that empower learners of all abilities — a value that also influences my approach in the creative arts.
         </p>
+        <!-- Social Media Platforms -->
+        <div class="mt-8">
+         <h4 class="text-theatreRed font-semibold mb-2">Connect with me:</h4>
+         <div class="flex space-x-4">
+           <a href="https://www.instagram.com/" target="_blank" class="text-theatreGold text-2xl hover:text-theatreRed" aria-label="Instagram">
+             <i class="fab fa-instagram"></i>
+            </a>
+           <a href="https://www.facebook.com/" target="_blank" class="text-theatreGold text-2xl hover:text-theatreRed" aria-label="Facebook">
+             <i class="fab fa-facebook"></i>
+            </a>
+           <a href="https://www.linkedin.com/" target="_blank" class="text-theatreGold text-2xl hover:text-theatreRed" aria-label="LinkedIn">
+             <i class="fab fa-linkedin"></i>
+            </a>
+           <a href="mailto:nkimathifiona@gmail.com" class="text-theatreGold text-2xl hover:text-theatreRed" aria-label="Email">
+             <i class="fas fa-envelope"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
